--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .price-card {
   display: flex;
   flex-direction: column;
-  background-color: #1F3D63;
+  background-color: #334247;
   width: 380px;
   height: 770px;
   margin: 0 9px;
