--- a/styles/price-cards.scss
+++ b/styles/price-cards.scss
@@ -62,6 +62,7 @@
             height: 40px;
             border: none;
             font-size: 14px;
+            text-align: center;
         }
     }
 }
