--- a/styles/price-cards.scss
+++ b/styles/price-cards.scss
@@ -61,6 +61,8 @@
             width: 155px;
             height: 40px;
             border: none;
+            font-size: 14px;
+            font-weight: normal;
         }
     }
 }
