--- a/styles/card-basic.scss
+++ b/styles/card-basic.scss
@@ -1,7 +1,5 @@
-.basic {
-    .price-card__price {
-        background-color: $first-price-color;
-    }
+.basic-price {
+    background-color: $first-price-color;
 }
 
 .basic-img {
