--- a/styles/card-business.scss
+++ b/styles/card-business.scss
@@ -1,7 +1,5 @@
-.business {
-    .price-card__price {
-        background-color: $second-price-color;
-    }
+.business-price {
+    background-color: $second-price-color;
 }
 
 .business-img {
