--- a/styles/card-webshop.scss
+++ b/styles/card-webshop.scss
@@ -1,7 +1,5 @@
-.webshop {
-    .price-card__price {
-        background-color: $third-price-color;
-    }
+.webshop-price {
+    background-color: $third-price-color;
 }
 
 .webshop-img {
