--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@
   font-weight: normal;
 }
 
-.basic .price-card__price {
+.basic-price {
   background-color: #5BB189;
 }
 
@@ -78,7 +78,7 @@
   background-color: #5BB189;
 }
 
-.business .price-card__price {
+.business-price {
   background-color: #3A6BA5;
 }
 
@@ -90,7 +90,7 @@
   background-color: #3A6BA5;
 }
 
-.webshop .price-card__price {
+.webshop-price {
   background-color: #EC632A;
 }
 
